--- a/config/templates/grpc-backend.yaml
+++ b/config/templates/grpc-backend.yaml
@@ -1,13 +1,13 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: example-secure
+  name: grpc-backend
 spec:
-  replicas: 1
+  replicas: 3
   template:
     metadata:
       labels:
-        app: loadgen
+        app: grpc-backend
     spec:
       serviceAccountName: cockroachdb
       volumes:
@@ -16,12 +16,14 @@ spec:
           secretName: cockroachdb.client.root
           defaultMode: 256
       containers:
-      - name: loadgen
-        image: cockroachdb/loadgen-kv:0.1
+      - name: grpc-backend
+        image: gcr.grpc-backend
         imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 8081
+          name: grpc
         volumeMounts:
         - name: client-certs
           mountPath: /cockroach-certs
         command:
-          - "/kv"
-          - "postgres://root@cockroachdb-public:26257/kv?sslmode=verify-full&sslcert=/cockroach-certs/client.root.crt&sslkey=/cockroach-certs/client.root.key&sslrootcert=/cockroach-certs/ca.crt"
+          - "go run ./main.go -port=8081 -public_key_file=/cockroach-certs/cockroachdb.client.root"
