--- a/config/templates/grpc-backend.yaml
+++ b/config/templates/grpc-backend.yaml
@@ -1,10 +1,6 @@
 apiVersion: v1
 kind: Service
 metadata:
-  # This service only exists to create DNS entries for each pod in the stateful
-  # set such that they can resolve each other's IP addresses. It does not
-  # create a load-balanced ClusterIP and should not be used directly by clients
-  # in most circumstances.
   name: grpc-backend
   labels:
     app: grpc-backend
@@ -18,9 +14,9 @@ spec:
   - port: 8081
     targetPort: 8081
     name: grpc
-  clusterIP: None
   selector:
     app: grpc-backend
+  type: LoadBalancer
 ---
 apiVersion: apps/v1beta1
 kind: Deployment
@@ -45,7 +41,7 @@ spec:
       containers:
       - name: grpc-backend
         image: grpc-backend:latest
-        imagePullPolicy: Never
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8081
           name: grpc
@@ -57,4 +53,4 @@ spec:
         command:
           - "/bin/bash"
           - "-ecx"
-          - "exec ./main.go -port=8081 -public_key_file=/public-certs/YOUR_CERTS_FILE"
+          - "exec ./main.go -port=8081 -public_key_file=/public-certs/oauth.pem"
