--- a/datanode/kubernetes/values.yaml
+++ b/datanode/kubernetes/values.yaml
@@ -1,14 +1,13 @@
 # Required
-PublicAddr: # Public load balancer IP that was generated from make-certs.py
+ips:
 namespace:
 storageClass: # Name of the storage class for your cluster you want the nodes to use. (i.e. managed-premium)
-backendImage: # Name of the grpc backend image
-gatewayImage: # Name of the http gateway image
+storageAPIImage:
 
 #Optionally edit
 image: cockroachdb/cockroach:v19.1.3
 # Name of the cockroach user
-cockroachUser: {{ .Values.cockroachUser }}
+cockroachUser: root
 # WARNING: Never set this to true if you are joining an existing cluster
 clusterInit: false
 psp: #You will likely need this if PSP is turned on.
